--- a/fly.toml
+++ b/fly.toml
@@ -12,8 +12,12 @@ console_command = 'php /var/www/html/artisan tinker'
     NODE_VERSION = '18'
     PHP_VERSION = '8.2'
 
+[deploy]
+  release_command = "php /var/www/html/artisan migrate --force"
+
 [env]
   APP_ENV = 'production'
+  DB_CONNECTION = 'pgsql'
   LOG_CHANNEL = 'stderr'
   LOG_LEVEL = 'info'
   LOG_STDERR_FORMATTER = 'Monolog\Formatter\JsonFormatter'
